--- a/module/js/Spotify/package.json
+++ b/module/js/Spotify/package.json
@@ -14,7 +14,8 @@
   "license": "ISC",
   "dependencies": {
     "@bufbuild/protobuf": "^1.7.2",
-    "esbuild": "0.16.17"
+    "esbuild": "0.16.17",
+    "protobufjs": "^7.4.0"
   },
   "devDependencies": {
     "@bufbuild/buf": "^1.29.0",
