--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -3,6 +3,7 @@ name: Fetch All APKs from Latest Release
 on:
     schedule:
         - cron: '0 0 */2 * *'
+    workflow_dispatch:
 
 jobs:
     fetch-all-apks:
