--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -15,10 +15,13 @@ jobs:
                 id: get_apks
                 run: |
                       echo "Lấy thông tin release..."
-                      curl -s -H "Authorization: token ${{ secrets.PRIVATE_REPO_TOKEN }}" \
+                      curl -s \
+                            -H "Accept: application/vnd.github+json" \
+                            -H "Authorization: Bearer ${{ secrets.PRIVATE_REPO_TOKEN }}" \
+                            -H "X-GitHub-Api-Version: 2022-11-28" \
                             https://api.github.com/repos/hoangsvn/Touch/releases/latest > release.json
                       echo "Tạo danh sách APK URLs..."
-                      mkdir -p apk
+                      cat release.json
                       jq -r '.assets[] | select(.name | endswith(".apk")) | .browser_download_url' release.json > apk_urls.txt
             -   name: Download all APK files
                 run: |
