--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -21,8 +21,8 @@ jobs:
                             -H "X-GitHub-Api-Version: 2022-11-28" \
                             https://api.github.com/repos/hoangsvn/Touch/releases/latest > release.json
                       echo "Tạo danh sách APK URLs..."
-                      cat release.json
                       jq -r '.assets[] | select(.name | endswith(".apk")) | .browser_download_url' release.json > apk_urls.txt
+                      cat apk_urls.txt
             -   name: Download all APK files
                 run: |
                       echo "Bắt đầu tải APKs..."
