--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -14,24 +14,24 @@ jobs:
             -   name: Get release info and extract APK URLs
                 id: get_apks
                 run: |
-                    echo "Lấy thông tin release..."
-                    curl -L \
-                        -H "Accept: application/vnd.github+json" \
-                        -H "Authorization: Bearer ${{ secrets.PRIVATE_REPO_TOKEN }}" \
-                        -H "X-GitHub-Api-Version: 2022-11-28" \
-                        https://api.github.com/repos/hoangsvn/Touch/releases/latest > release.json
-                    echo "Tạo danh sách APK URLs..."
-                    cat apk_urls.txt
-                    jq -r '.assets[] | select(.name | endswith(".apk")) | .browser_download_url' release.json > apk_urls.txt
-                    cat apk_urls.txt
+                      echo "Lấy thông tin release..."
+                      curl -L \
+                            -H "Accept: application/vnd.github+json" \
+                            -H "Authorization: Bearer ${{ secrets.PRIVATE_REPO_TOKEN }}" \
+                            -H "X-GitHub-Api-Version: 2022-11-28" \
+                            https://api.github.com/repos/hoangsvn/Touch/releases/latest > release.json
+                      echo "Tạo danh sách APK URLs..."
+                      cat release.json
+                      jq -r '.assets[] | select(.name | endswith(".apk")) | .browser_download_url' release.json > apk_urls.txt
+                      cat apk_urls.txt
             -   name: Download all APK files
                 run: |
-                    echo "Bắt đầu tải APKs..."
-                    while read url; do
+                      echo "Bắt đầu tải APKs..."
+                      while read url; do
                         name=$(basename "$url")
                         echo "Tải $name"
                         curl -L -H "Authorization: token ${{ secrets.PRIVATE_REPO_TOKEN }}" "$url" -o "apk/$name"
-                    done < apk_urls.txt
+                      done < apk_urls.txt
             -   name: Cấu hình Git
                 run: |                  
                       git config user.name ${{ secrets.USER_NAME }}
