--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -36,18 +36,7 @@ jobs:
                         fi
                         curl -L $url \
                              -H "Authorization: Bearer ${{ secrets.PRIVATE_REPO_TOKEN }}" \
-                             -H "accept: text/html,application/xhtml+xml,application/xml;q=0.9,image/avif,image/webp,image/apng,*/*;q=0.8,application/signed-exchange;v=b3;q=0.7'" \
-                             -H "accept-language: vi-VN,vi;q=0.9,fr-FR;q=0.8,fr;q=0.7,en-US;q=0.6,en;q=0.5" \
-                             -H "cache-control: no-cache" \
-                             -H "pragma: no-cache" \
-                             -H "priority: u=0, i" \
-                             -H "sec-fetch-dest: document" \ 
-                             -H "sec-fetch-mode: navigate" \
-                             -H "sec-fetch-site: none" \ 
-                             -H "sec-fetch-user: ?1" \ 
-                             -H "upgrade-insecure-requests: 1" \
-                             -H "user-agent: Mozilla/5.0 (iPhone; CPU iPhone OS 16_6 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Version/16.6 Mobile/15E148 Safari/604.1" \
-                             -o "apk/$name"
+                             -O "apk/$name"
                       done < apk_urls.txt
             -   name: Cấu hình Git
                 run: |                  
