--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -2,7 +2,7 @@ name: Fetch All APKs from Latest Release
 
 on:
     schedule:
-        - cron: '0 0 */7 * *'
+        -   cron: '0 0 */7 * *'
     workflow_dispatch:
 
 jobs:
@@ -14,21 +14,22 @@ jobs:
             -   name: Get release info and extract APK URLs
                 id: get_apks
                 run: |
-                      echo "Lấy thông tin release..."
-                      curl -L \
-                            -H "Accept: application/vnd.github+json" \
-                            -H "Authorization: Bearer ${{ secrets.PRIVATE_REPO_TOKEN }}" \
-                            -H "X-GitHub-Api-Version: 2022-11-28" \
-                            https://api.github.com/repos/hoangsvn/Touch/releases/latest > release.json
-                      echo "Tạo danh sách APK URLs..."
-                      cat release.json
-                      jq -r '.assets[] | select(.name | endswith(".apk")) | .browser_download_url' release.json > apk_urls.txt
-                      cat apk_urls.txt
-            - name: Download all APK files
-              run: |
-                  echo "Bắt đầu tải APKs..."
-                  mkdir -p apk
-                  while read url; do
+                    echo "Lấy thông tin release..."
+                    curl -L \
+                          -H "Accept: application/vnd.github+json" \
+                          -H "Authorization: Bearer ${{ secrets.PRIVATE_REPO_TOKEN }}" \
+                          -H "X-GitHub-Api-Version: 2022-11-28" \
+                          https://api.github.com/repos/hoangsvn/Touch/releases/latest > release.json
+                    echo "Tạo danh sách APK URLs..."
+                    cat release.json
+                    jq -r '.assets[] | select(.name | endswith(".apk")) | .browser_download_url' release.json > apk_urls.txt
+                    cat apk_urls.txt
+            -   name: Download all APK files
+                run: |
+                    echo "Bắt đầu tải APKs..."
+                    mkdir -p apk
+                    while read url; do
+                    while read url; do
                     name=$(basename "$url")
                     echo "Tải $name"
                     if [ -f "apk/$name" ]; then
@@ -38,13 +39,13 @@ jobs:
                     curl -L "$url" \
                          -H "Authorization: Bearer ${{ secrets.PRIVATE_REPO_TOKEN }}" \
                          -o "apk/$name"
-                  done < apk_urls.txt
+                    done < apk_urls.txt
             -   name: Cấu hình Git
-                run: |                  
-                      git config user.name ${{ secrets.USER_NAME }}
-                      git config user.email ${{ secrets.EMAIL }}
+                run: |
+                    git config user.name ${{ secrets.USER_NAME }}
+                    git config user.email ${{ secrets.EMAIL }}
             -   name: Commit & Push APKs
                 run: |
-                        git add apk/
-                        git commit -m "Update APKs from latest release" || echo "No changes to commit"
-                        git push https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }} HEAD:main
+                    git add .
+                    git commit -m "Update APKs from latest release"
+                    git push https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }} HEAD:main
