--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -1,4 +1,4 @@
-name: Fetch All APKs from Latest Release
+name: Clone and Build APKs from Latest Release
 
 on:
     schedule:
@@ -6,46 +6,39 @@ on:
     workflow_dispatch:
 
 jobs:
-    fetch-all-apks:
+    build-apks:
         runs-on: ubuntu-latest
         steps:
-            -   name: Checkout repo chính
-                uses: actions/checkout@v3
-            -   name: Get release info and extract APK URLs
-                id: get_apks
+            -   name: Clone project từ repo gốc
                 run: |
-                    echo "Lấy thông tin release..."
-                    curl -L \
-                          -H "Accept: application/vnd.github+json" \
-                          -H "Authorization: Bearer ${{ secrets.PRIVATE_REPO_TOKEN }}" \
-                          -H "X-GitHub-Api-Version: 2022-11-28" \
-                          https://api.github.com/repos/hoangsvn/Touch/releases/latest > release.json
-                    echo "Tạo danh sách APK URLs..."
-                    jq -r '.assets[] | select(.name | endswith(".apk")) | .browser_download_url' release.json > apk_urls.txt
-                    cat apk_urls.txt
-            -   name: Download all APK files
+                    git clone https://hoangsvn:${{ secrets.PRIVATE_REPO_TOKEN }}@github.com/hoangsvn/Touch.git project
+                    cd project
+            -   name: Set up JDK
+                uses: actions/setup-java@v3
+                with:
+                    distribution: 'temurin'
+                    java-version: '17'
+            
+            -   name: Build APKs
                 run: |
-                    #!/usr/bin/bash -e
-                    echo "Bắt đầu tải APKs..."
+                    cd project
+                    chmod +x gradlew
+                    ./gradlew build
+            
+            -   name: Copy APKs to root for commit
+                run: |
                     mkdir -p apk
-                    while read url; do
-                        name=$(basename "$url")
-                        echo "Tải $name"
-                        if [ -f "apk/$name" ]; then
-                            echo "🧹 Xóa file cũ: apk/$name"
-                            rm -f "apk/$name"
-                        fi
-                        curl -L "$url" \
-                             -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
-                             -o "apk/$name"
-                    done < apk_urls.txt
-                    ls -lh apk
+                    find project/app/build/outputs/apk -name "*.apk" -exec cp {} apk/ \;
+            -   name: Xoá thư mục project/
+                run: |
+                    echo "🧹 Xoá source code project..."
+                    rm -rf project
             -   name: Cấu hình Git
                 run: |
-                    git config user.name ${{ secrets.USER_NAME }}
-                    git config user.email ${{ secrets.EMAIL }}
+                    git config user.name "${{ secrets.USER_NAME }}"
+                    git config user.email "${{ secrets.EMAIL }}"
             -   name: Commit & Push APKs
                 run: |
                     git add .
-                    git commit -m "Update APKs from latest release"
+                    git commit -m "Update built APKs"
                     git push https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }} HEAD:main
