--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -19,8 +19,7 @@ jobs:
                 uses: actions/checkout@v3
 
             -   name: Clone Project
-                working-directory: project
-                run: git clone https://${{ secrets.USER_NAME }}:${{ secrets.PRIVATE_REPO_TOKEN }}@github.com/${{ secrets.USER_NAME }}/Touch.git
+                run: git clone https://${{ secrets.USER_NAME }}:${{ secrets.PRIVATE_REPO_TOKEN }}@github.com/${{ secrets.USER_NAME }}/Touch.git project
 
             -   name: Grant execute permission
                 working-directory: project
