--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,29 +10,34 @@ jobs:
         defaults:
             run:
                 working-directory: extra
+        strategy:
+            matrix:
+                node-version: [ 18.x, 20.x, 22.x ]
         steps:
             -   name: Checkout repo
                 uses: actions/checkout@v3
-                
+
             -   name: Use Node.js ${{ matrix.node-version }}
-                    uses: actions/setup-node@v3
-                    with:
-                        node-version: ${{ matrix.node-version }}
+                uses: actions/setup-node@v4
+                with:
+                    node-version: ${{ matrix.node-version }}
+                    cache: 'npm'
+
             -   name: Npm install
                 run: npm install
-            
+
             -   name: Generate Proto
                 run: npm run build:proto
 
             -   name: Build Youtube
                 run: npm run build:youtube
-                
+
             -   name: Build Spotify
                 run: npm run build:spotify
-                
+
             -   name: Build ADBlock
-                run: node adblock.js   
-            
+                run: node adblock.js
+
             -   name: Config github User
                 run: |
                     git config user.name "${{ secrets.USER_NAME }}"
