--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,43 +1,47 @@
 name: Build Module
 on:
-    schedule:
-        -   cron: '0 0 */20 * *'
-    workflow_dispatch:
+  schedule:
+    - cron: '0 0 */20 * *'
+  workflow_dispatch:
 
 jobs:
-    build-module:
-        runs-on: ubuntu-latest
-        steps:
-            -   name: Checkout repo
-                uses: actions/checkout@v3
+  build-module:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repo
+        uses: actions/checkout@v3
 
-            -   name: Use Node.js 18.x
-                uses: actions/setup-node@v4
-                with:
-                    node-version: 18
+      - name: Use Node.js 18.x
+        uses: actions/setup-node@v4
+        with:
+          node-version: 18
 
-            -   name: Npm install
-                working-directory: extra
-                run: npm install
+      - name: Npm install
+        working-directory: extra
+        run: npm install
 
-            -   name: Build Youtube
-                working-directory: extra
-                run: npm run build:youtube
+      - name: Build Youtube
+        working-directory: extra
+        run: npm run build:youtube
 
-            -   name: Build Spotify
-                working-directory: extra
-                run: npm run build:spotify
+      - name: Build Spotify
+        working-directory: extra
+        run: npm run build:spotify
 
-            -   name: Build ADBlock
-                working-directory: extra
-                run: node adblock.js
+      - name: Build SoundCloud
+        working-directory: extra
+        run: npm run build:soundcloud
 
-            -   name: Config github User
-                run: |
-                    git config user.name "${{ secrets.USER_NAME }}"
-                    git config user.email "${{ secrets.EMAIL }}"
-            -   name: Commit & Push
-                run: |
-                    git add .
-                    git commit -m "Update Module by CICD Action"
-                    git push https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }} HEAD:main
+      - name: Build ADBlock
+        working-directory: extra
+        run: npm run build:adblock
+
+      - name: Config github User
+        run: |
+          git config user.name "${{ secrets.USER_NAME }}"
+          git config user.email "${{ secrets.EMAIL }}"
+      - name: Commit & Push
+        run: |
+          git add .
+          git commit -m "Update Module by CICD Action"
+          git push https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }} HEAD:main
